release: 1.3.1 - Fix layout stretching on large screens

--- a/styles.css
+++ b/styles.css
@@ -277,6 +277,7 @@
 	display: flex;
 	flex-direction: column;
 	flex-grow: 1;
+	height: 100%;
 	min-height: 0;
 }
 
@@ -284,6 +285,7 @@
 	display: flex;
 	flex-direction: column;
 	flex-grow: 1;
+	height: 100%;
 	min-height: 0;
 }
 
@@ -1060,7 +1062,8 @@ select.dropdown option {
 	width: 100%;
 	overflow-x: auto;
 	margin-top: 16px;
-	max-height: 250px;
+	flex-grow: 1;
+	min-height: 0;
 	overflow-y: auto;
 }
 
